# panels

./: .gitignore  LICENSE  README.md  docker-compose.override.yaml  docker-compose.yaml  skaffold.yaml
docs/: README.md
manifests/: auth-service.yaml  comment-service.yaml  frontend.yaml  gateway-service.yaml  jwtkeys-secret.yaml  kafka.yaml  panel-service.yaml  post-service.yaml  services-configmap.yaml  user-service.yaml
protobufs/: auth.proto  comment.proto  panel.proto  post.proto  user.proto
services/auth-service/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
services/auth-service/auth_service/: main.py  service.py
services/auth-service/auth_service/events/: base_consumer.py  service.py  user_consumer.py
services/auth-service/auth_service/models/: config.py  exceptions.py  service.py
services/auth-service/auth_service/models/proto/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  user_pb2.pyi  user_pb2_grpc.py
services/auth-service/auth_service/postgres/: repository.py  service.py
services/auth-service/auth_service/postgres/migrations/: 000001_init_auth.up.sql
services/auth-service/auth_service/rpc/: auth.py  service.py
services/comment-service/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
services/comment-service/comment_service/: main.py  service.py
services/comment-service/comment_service/events/: base_consumer.py  post_consumer.py  producer.py  service.py  user_consumer.py
services/comment-service/comment_service/models/: config.py  exceptions.py  service.py
services/comment-service/comment_service/models/proto/: comment_pb2.py  comment_pb2.pyi  comment_pb2_grpc.py  post_pb2.py  post_pb2.pyi  post_pb2_grpc.py  user_pb2.py
services/comment-service/comment_service/postgres/: repository.py  service.py
services/comment-service/comment_service/postgres/migrations/: 000001_init_comments.up.sql
services/comment-service/comment_service/redis/: repository.py  service.py
services/comment-service/comment_service/rpc/: comment.py  service.py
services/frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json
services/gateway-service/: .env.example  Dockerfile  Makefile  README.md  go.mod  go.sum
services/panel-service/: .env.example  Dockerfile  Makefile  README.md  go.mod  go.sum
(+134 files in other folders)
